--- a/style.css
+++ b/style.css
@@ -3,10 +3,9 @@
 
 
 #setting-display {
-  padding: 50px;
   color: white;
-  width: 100%;
-  height: 120%;
+  /* width: 100%; */
+  height: 100%;
   align-items: center;
   background-color: #15151e;
   position: absolute;
