--- a/style.css
+++ b/style.css
@@ -1,119 +1,66 @@
 /* Google Fonts 読み込み */
 @import url("https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap");
 
-
-#setting-display {
-  color: white;
-  /* width: 100%; */
-  height: 100%;
-  align-items: center;
+body {
   background-color: #15151e;
-  position: absolute;
 }
-
-#main-display {
-  position: absolute;
-
+.navbar {
+  height: 2rem;
 }
-
-/* 時計を囲うコンテナー */
-.clock-container {
-  width: 100%;
-  height: 100px;
-  background-color: #15151e;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-
 /* 時計の共通スタイル */
 .clock {
   font-family: "Share Tech Mono", monospace;
   color: #daf6ff;
   text-shadow: 0 0 20px #0aafe6;
-  line-height: 1.2;
+  line-height: 1;
   text-align: center;
 }
-
 /* 日付のスタイル */
 .clock-date {
-  font-size: 10.5px;
+  font-size: 0.8rem;
 }
 /* 時間のスタイル */
 .clock-time {
-  font-size: 25px;
-}
-
-.upper-left {
-  padding: 30px;
+  font-size: 1.5rem;
 }
 
 /* メイン領域を囲うコンテナー */
 .main-container {
-  width: 100%;
-  height: 330px;
-  background-color: #15151e;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+  height: 15rem;
   font-family: "Noto Sans JP";
   color: #daf6ff;
   text-shadow: 0 0 20px #0aafe6;
-  margin:0%;
-  padding: 0%;
 }
 
 .stage-label {
-  width: 100%;
-  height: 30px;
-  background-color: #15151e;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* text-align: center; */
   font-family: "Noto Sans JP";
   color: #daf6ff;
   text-shadow: 0 0 20px #0aafe6;
-  padding-top: 1%;
-  font-size: 11px;
+  font-size: 0.6rem;
 }
 
 .data-analysis {
-  height: 330px;
   color: #daf6ff;
   text-shadow: 0 0 20px #0aafe6;
   font-family: "Noto Sans JP";
-  font-size: 11px;
+  font-size: 0.7rem;
 }
 
 .animation-area {
   height: 100%;
-  box-shadow: 0px 0px 1px 0.1px #daf6ff;
+  box-shadow: 0px 0px 1px 1px #daf6ff;
   padding: 0%;
-}
-
-.wait-time-classfy {
-  margin:1%;
-  background-color: #15151e;
-  color: black;
-  font-size: 0.8em;
-}
-
-.chart-area {
-  width: 100%;
-  margin-top: 20px;
 }
 
 #description-list {
   list-style: none;
-  margin:2%;
-  font-size: 1.1em;
+  font-size: 0.85rem;
+  text-align: center;
+  width:90%;
 }
 
 /* 文字サイズ調整 */
-@media screen and (max-width: 500px) {
+/* @media screen and (max-width: 500px) {
   .clock-date {
     font-size: 5vw;
   }
@@ -126,4 +73,4 @@
   .lower-container {
     font-size: 10vw;
   }
-}
+} */
